# GammaDeck

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_store.rs  error.rs  gamma_curve.rs  lib.rs  main.rs  model.rs
src-tauri/src/backend/: mod.rs  unsupported.rs  windows_gdi.rs
