[package]
name = "gammadeck"
version = "0.1.0"
description = "A modern Gamma Panel-inspired gamma profile switcher."
authors = ["GammaDeck"]
edition = "2021"

[lib]
name = "gammadeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gammadeck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }
